[package]
name = "hana"
version = "0.1.0"
description = "Hana"
authors = [ "Ian" ]
license = ""
repository = ""
default-run = "hana"
edition = "2018"
build = "src/build.rs"

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
sha-1 = "0.9.3"
hana-server = "0.1.7"
hana-client = "0.1.2"
hana-types = "0.1.0"
regex = "1"
hex = "0.3.1"
anyhow = "1.0.38"
open = "1.5.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "hana"
path = "src/main.rs"
